--- a/src/templates/fr/2019/contributors.html
+++ b/src/templates/fr/2019/contributors.html
@@ -69,7 +69,7 @@
       "itemListElement": [{
         "@type": "ListItem",
         "position": 1,
-        "name": "Page d'accueil {{ year }} ({{ language }})",
+        "name": "Page d’accueil {{ year }} ({{ language }})",
         "item": "https://almanac.httparchive.org{{  url_for('home', year=year, lang=lang) }}"
       },{
         "@type": "ListItem",
