--- a/src/templates/fr/2019/index.html
+++ b/src/templates/fr/2019/index.html
@@ -2,7 +2,7 @@
 
 {% block title %}Web Almanac 2019{% endblock %}
 
-{% block description %}Le Web Almanac est un rapport annuel sur l'état du Web qui combine l'expertise de la communauté Web avec les données et tendances de HTTP Archive.{% endblock %}
+{% block description %}Le Web Almanac est un rapport annuel sur l’état du Web qui combine l’expertise de la communauté Web avec les données et tendances de HTTP Archive.{% endblock %}
 
 {% block meta %}
 <meta name="description" content="{{ self.description() }}">
@@ -77,7 +77,7 @@
       "itemListElement": [{
         "@type": "ListItem",
         "position": 1,
-        "name": "Page d'accueil {{ year }} ({{ language }})",
+        "name": "Page d’accueil {{ year }} ({{ language }})",
         "item": "https://almanac.httparchive.org{{  url_for('home', year=year, lang=lang) }}"
       }]
     }
@@ -96,7 +96,7 @@
       <h2 class="title title-center">Focus sur le chapitre…</h2>
       <h3>Parties tierces (3P)</h3>
       <blockquote>
-          Le Web ouvert a été conçu pour être vaste, interconnectable et interopérable. La possibilité d’accéder à de puissantes librairies tierces et de les utiliser sur votre site avec des éléments <code>&lt;link></code> ou <code>&lt;script></code> a décuplé la productivité des développeurs et permis de nouvelles et incroyables expériences web ; par contre, l'immense popularité de quelques fournisseurs tiers pose d'importants problèmes en termes de performances et de confidentialité. Ce chapitre examine la prévalence et l'impact du code tiers sur le Web en 2019, les modèles d'utilisation du Web qui mènent à la popularité des solutions tierces et les répercussions potentielles sur l'avenir des performances Web et de la confidentialité.
+          Le Web ouvert a été conçu pour être vaste, interconnectable et interopérable. La possibilité d’accéder à de puissantes librairies tierces et de les utiliser sur votre site avec des éléments <code>&lt;link></code> ou <code>&lt;script></code> a décuplé la productivité des développeurs et permis de nouvelles et incroyables expériences web ; par contre, l’immense popularité de quelques fournisseurs tiers pose d’importants problèmes en termes de performances et de confidentialité. Ce chapitre examine la prévalence et l’impact du code tiers sur le Web en 2019, les modèles d’utilisation du Web qui mènent à la popularité des solutions tierces et les répercussions potentielles sur l’avenir des performances Web et de la confidentialité.
       </blockquote>
       <div class="featured-chapter-content-data">
         <div class="featured-chapter-content-data-item">
@@ -122,7 +122,7 @@
     <div class="contributors">
       <h2 class="title title-alt">Contributeurs et contributrices</h2>
       <p>
-          Le Web Almanac a été rendu possible grâce au travail acharné de la communauté Web. {{ contributors }} personnes ont consacré bénévolement d'innombrables heures à le planifier, faire des recherches, le rédiger et le mettre à votre disposition.
+          Le Web Almanac a été rendu possible grâce au travail acharné de la communauté Web. {{ contributors }} personnes ont consacré bénévolement d’innombrables heures à le planifier, faire des recherches, le rédiger et le mettre à votre disposition.
       </p>
       <a href="{{ url_for('contributors', year=year, lang=lang) }}" class="alt btn">
         Voir les contributeurs et contributrices
@@ -157,7 +157,7 @@
         </div>
       </div>
       <p class="methodology-info">
-          Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac proviennent du jeu de données HTTP Archiven, un projet communautaire qui suit l'évolution de la construction du web depuis 2010. Grâce à WebPageTest et Lighthouse, HTTP Archive collecte chaque mois les métadonnées de près de 6 millions de sites Web et les insère dans une base de données publique BigQuery pour les analyser. Le jeu de données de juillet 2019 a servi de base aux mesures du Web Almanac. Pour plus d'informations, consultez la page Méthodologie.
+          Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac proviennent du jeu de données HTTP Archiven, un projet communautaire qui suit l’évolution de la construction du web depuis 2010. Grâce à WebPageTest et Lighthouse, HTTP Archive collecte chaque mois les métadonnées de près de 6 millions de sites Web et les insère dans une base de données publique BigQuery pour les analyser. Le jeu de données de juillet 2019 a servi de base aux mesures du Web Almanac. Pour plus d’informations, consultez la page Méthodologie.
       </p>
       <a href="{{ url_for('methodology', year=year, lang=lang) }}" class="alt btn">
         En savoir plus sur la Méthodologie
