--- a/src/templates/fr/2019/contributors.html
+++ b/src/templates/fr/2019/contributors.html
@@ -107,11 +107,6 @@
 .filter-container {
   margin-bottom: 30px;
 }
-.contributors-count {
-  position: absolute;
-  right: 0;
-  top: 20px;
-}
 
 .filter-container button {
   font-size: 1rem;
@@ -299,9 +294,11 @@
       <img src="/static/images/avatars/9.jpg" height="100" width="100" loading="lazy" />
   </div>
   <div class="contributors {{ ' '.join(config.teams.keys()) }}">
-    <div class="contributors-count"><span id="filtered-contributors">{{ config.contributors.items() | length }}</span> personnes</div>
     <div class="filter-container">
-      <p>Filtrer par équipe&nbsp;:</p>
+      <p>
+        Filtrer par équipe&nbsp;:
+        <span id="filtered-contributors">{{ config.contributors.items() | length }}</span> personnes
+      </p>
       {% set localizedTeamNames = {
             "analysts": "Analyse",
             "authors": "Rédaction",
