--- a/src/templates/fr/2019/methodology.html
+++ b/src/templates/fr/2019/methodology.html
@@ -403,7 +403,7 @@
       <h3 id="third-party-web">Third Party Web</h3>
 
       <p>
-        <a href="https://www.thirdpartyweb.today/">Third Party Web</a> est un projet de recherche de <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>, auteur du chapitre sur les <a href="{{ url_for('chapter', year=year, lang=lang, chapter='third-parties') }}">Parties Tierces</a>, qui utilise les données de HTTP Archive et Lighthouse pour identifier et analyser l’impact des ressources tierces sur le Web.
+        <a href="https://www.thirdpartyweb.today/">Third Party Web</a> est un projet de recherche de <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>, auteur du chapitre sur les <a href="{{ url_for('chapter', year=year, lang=lang, chapter='third-parties') }}">Tierces Parties</a>, qui utilise les données de HTTP Archive et Lighthouse pour identifier et analyser l’impact des ressources tierces sur le Web.
       </p>
 
       <p>
