--- a/src/templates/fr/2019/table_of_contents.html
+++ b/src/templates/fr/2019/table_of_contents.html
@@ -192,7 +192,7 @@
       "CSS": "CSS",
       "Markup": "Balisage Web",
       "Media": "Média",
-      "Third Parties": "Parties Tierces",
+      "Third Parties": "Tierces Parties",
       "Fonts": "Polices d’écriture",
       "Performance": "Performance",
       "Security": "Sécurité",
