Home page Hero Image fix (#604)
* Home page Hero Image fix

* Change to use vh method instead of padding

* Update AR version

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -95,17 +95,31 @@ p {
   font-family: 'Poppins', sans-serif;
 }
 
-.intro-image {
+.intro-image-wrapper {
   grid-area: image;
   display: none;
+  width:100%;
+}
+
+.intro-image {
+  background-image: url(/static/images/home-hero.png);
+  background-size: cover;
+  height: 67.5vw;
+  width: 86vw;
+}
+
+.intro-image-2019-wrapper {
+  grid-area: image;
+  width:100%;
 }
 
 .intro-image-2019 {
-  grid-area: image;
+  background-image: url(/static/images/home-hero-2019.png);
+  background-size: cover;
   max-height: 470px;
-  max-width: 100%;
-  height: auto;
-  margin-bottom: -90px;
+  max-width: 458px;
+  height: 41vw;
+  width: 40vw;
 }
 
 .intro .btn {
@@ -345,13 +359,13 @@ p {
     font-weight: bold;
   }
 
-  .intro-image {
+  .intro-image-wrapper {
     display: block;
     max-width: 100%;
     margin-top: 80px;
     margin-right: -46px;
   }
-  .intro-image-2019 {
+  .intro-image-2019-wrapper {
     display: none;
   }
 
@@ -490,14 +504,14 @@ p {
     font-weight: bold;
   }
 
-  .intro-image {
+  .intro-image-wrapper {
     display: block;
     max-width: 100%;
     margin-top: 60px;
     margin-right: -46px;
   }
 
-  .intro-image-2019 {
+  .intro-image-2019-wrapper {
     display: none;
   }
 
