--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -65,8 +65,12 @@
           Empieza a explorar
         </a>
       </div>
-      <img class="intro-image-2019" src="/static/images/home-hero-2019.png" alt="Web Almanac edición 2019" />
-      <img class="intro-image" src="/static/images/home-hero.png" alt="Web Almanac edición 2019" />
+      <div class="intro-image-2019-wrapper">
+        <div class="intro-image-2019"></div>
+      </div>
+      <div class="intro-image-wrapper">
+        <div class="intro-image"></div>
+      </div>
     </div>
     {% endif %}    
   </header>
