--- a/src/templates/fr/2019/base.html
+++ b/src/templates/fr/2019/base.html
@@ -68,8 +68,12 @@
           Commencer l’exploration
         </a>
       </div>
-      <img class="intro-image-2019" src="/static/images/home-hero-2019.png" alt="Édition 2019 du Web Almanac" />
-      <img class="intro-image" src="/static/images/home-hero.png" alt="Web Almanac" />
+      <div class="intro-image-2019-wrapper">
+        <div class="intro-image-2019"></div>
+      </div>
+      <div class="intro-image-wrapper">
+        <div class="intro-image"></div>
+      </div>
     </div>
     {% endif %}
   </header>
