--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -68,8 +68,12 @@
           Start exploring
         </a>
       </div>
-      <img class="intro-image-2019" src="/static/images/home-hero-2019.png" alt="The Web Almanac 2019 edition" />
-      <img class="intro-image" src="/static/images/home-hero.png" alt="The Web Almanac 2019 edition" />
+      <div class="intro-image-2019-wrapper">
+        <div class="intro-image-2019"></div>
+      </div>
+      <div class="intro-image-wrapper">
+        <div class="intro-image"></div>
+      </div>
     </div>
     {% endif %}
   </header>
