--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -88,8 +88,8 @@
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Tabla de Contenidos</a>
         <a href="{{ url_for('contributors', year=year, lang=lang) }}">Contribuidores</a>
         <a href="{{ url_for('methodology', year=year, lang=lang) }}">Metodología</a>
+        {{ language_switcher() }}
       </nav>
-      <div class="language-switcher">{{ language_switcher() }}</div>
       <p class="copyright">Copyright © 2019 Web Almanac. Todos los derechos reservados.</p>
       <div class="social-media">
         <a href="https://twitter.com/HTTPArchive" class="twitter">
@@ -133,11 +133,6 @@
 {% macro language_switcher() %}
 {% if supported_languages | length > 1%}
 <div class="language-switcher">
-  {% if language is not none %}
-    <img src="/static/images/{{ language.lang_code }}.png" class="flag" height="25" width="25" loading="lazy" />
-  {% else %}
-    <img src="/static/images/English.png" class="flag" height="25" width="25" loading="lazy" />
-  {% endif %}
   <select>
     {% for l in supported_languages %}
       <option
