Removes framework usage section (#592)
* removes framework usage section

* updates framework section to include a small note

* changes note to aside + includes empty figure

* adds frameworks and UI libraries section back with note + adds paragraph to methodology

* generate script

* updates note on limitations

--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -390,6 +390,10 @@
       <p>
         Wappalyzer powers many chapters that analyze the popularity of developer tools like WordPress, Bootstrap, and jQuery. For example, the <a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">Ecommerce</a> and <a href="{{ url_for('chapter', year=year, lang=lang, chapter='cms') }}">CMS</a> chapters rely heavily on the respective <a href="https://www.wappalyzer.com/categories/ecommerce">Ecommerce</a> and <a href="https://www.wappalyzer.com/categories/cms">CMS</a> categories of technologies detected by Wappalyzer.
       </p>
+
+      <p>
+        All detection tools, including Wappalyzer, have their limitations. The validity of their results will always depend on how accurate their detection mechansims are. The Web Almanac will add a note in every chapter where Wappalyzer is used but its analysis may not be accurate due to a specific reason. 
+      </p>
     </section>
 
     <section>
