Added warning on BigQuery costs (#618)
* Added warning on BigQuery costs

* Update src/templates/en/2019/methodology.html

Co-Authored-By: Rick Viscomi <rviscomi@users.noreply.github.com>

Co-authored-by: Rick Viscomi <rviscomi@users.noreply.github.com>

--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -162,6 +162,10 @@
         </p>
 
         <p>
+          <aside>Please note that some of these queries are quite large and can be <a href="https://cloud.google.com/bigquery/pricing">expensive</a> to run yourself, as BigQuery is billed by the terabyte. For help controlling your spending, refer to Tim Kadlec's post <a href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">Using BigQuery Without Breaking the Bank</a>.</aside>
+        </p>
+
+        <p>
           For example, to understand the median number of bytes of JavaScript per desktop and mobile page, see <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/sql/2019/01_JavaScript/01_01b.sql">01_01b.sql</a>:
         </p>
 
