Fix lighthout errors and also inconsistencies in contributors and cdn pages (#644)

--- a/src/templates/ar/2019/base.html
+++ b/src/templates/ar/2019/base.html
@@ -27,7 +27,7 @@
         {% endif %}
         {{ language_switcher() }}
       </div>
-      <button type="button" class="menu-btn" arial-label="Menu">
+      <button type="button" class="menu-btn" aria-label="Menu">
         <img class="menu-icon" src="/static/images/menu.png" data-src-close="/static/images/close.png" alt="" />
       </button>
       <nav class="menu">
@@ -40,10 +40,10 @@
           </a>
           <div class="social-media">
             <a href="https://twitter.com/HTTPArchive" class="twitter">
-              <img src="/static/images/twitter.png" height="80" width="65" alt="Twitter" loading="lazy" />
+              <img src="/static/images/twitter.png" height="65" width="80" alt="Twitter" loading="lazy" />
             </a>
             <a href="https://github.com/HTTPArchive/almanac.httparchive.org" class="github">
-              <img src="/static/images/github.png" height="80" width="78" alt="GitHub" loading="lazy" />
+              <img src="/static/images/github.png" height="75" width="80" alt="GitHub" loading="lazy" />
             </a>
           </div>
           {{ language_switcher() }}
@@ -94,10 +94,10 @@
       <p class="copyright"><span>© 2019 Web Almanac. Licensed under <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/master/LICENSE">Apache 2.0</a>.</span></p>
       <div class="social-media">
         <a href="https://twitter.com/HTTPArchive" class="twitter">
-          <img src="/static/images/twitter.png" alt="Twitter" height="80" width="65" loading="lazy" />
+          <img src="/static/images/twitter.png" alt="Twitter" height="65" width="80" loading="lazy" />
         </a>
         <a href="https://github.com/HTTPArchive/almanac.httparchive.org" class="github">
-          <img src="/static/images/github.png" alt="GitHub" height="80" width="78" loading="lazy" />
+          <img src="/static/images/github.png" alt="GitHub" height="78" width="80" loading="lazy" />
         </a>
       </div>
       <hr>
