--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -24,7 +24,7 @@
         {% endif %}
         {{ language_switcher() }}
       </div>
-      <button type="button" class="menu-btn" arial-label="Menú">
+      <button type="button" class="menu-btn" aria-label="Menú">
         <img class="menu-icon" src="/static/images/menu.png" data-src-close="/static/images/close.png" alt="" />
       </button>
       <nav class="menu">
@@ -37,10 +37,10 @@
           </a>
           <div class="social-media">
             <a href="https://twitter.com/HTTPArchive" class="twitter">
-              <img src="/static/images/twitter.png" alt="Twitter" height="80" width="65" loading="lazy" />
+              <img src="/static/images/twitter.png" alt="Twitter" height="65" width="80" loading="lazy" />
             </a>
             <a href="https://github.com/HTTPArchive/almanac.httparchive.org" class="github">
-              <img src="/static/images/github.png" alt="GitHub" height="80" width="78" loading="lazy" />
+              <img src="/static/images/github.png" alt="GitHub" height="78" width="80" loading="lazy" />
             </a>
           </div>
           {{ language_switcher() }}
@@ -91,10 +91,10 @@
       <p class="copyright">Copyright © 2019 Web Almanac. Todos los derechos reservados.</p>
       <div class="social-media">
         <a href="https://twitter.com/HTTPArchive" class="twitter">
-          <img src="/static/images/twitter.png" alt="Twitter" height="80" width="65" loading="lazy" />
+          <img src="/static/images/twitter.png" alt="Twitter" height="65" width="80" loading="lazy" />
         </a>
         <a href="https://github.com/HTTPArchive/almanac.httparchive.org" class="github">
-          <img src="/static/images/github.png" alt="GitHub" height="80" width="78" loading="lazy" />
+          <img src="/static/images/github.png" alt="GitHub" height="78" width="80" loading="lazy" />
         </a>
       </div>
       <hr>
